Show overdue projections on dashboard
